# sqttv2

./: .gitignore  pnpm-lock.yaml
backend/: Cargo.toml  build.rs
backend/src/: main.rs  merge.rs  rgp.rs  sqtt.rs  userdata.rs
frontend/: buf.gen.yaml  package.json
frontend/src/: App.vue  grpc.ts
proto/: protocol.proto
proto/sqtt/v2/: sqtt.proto
