[package]
name = "backend"
authors = ["Tatsuyuki Ishi <ishitatsuyuki@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
scroll = { version = "0.11.0", features = ["derive"] }
anyhow = "1.0.66"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tonic-web = "0.4.0"
paste = "1.0.9"
num_enum = "0.5.7"

[build-dependencies]
tonic-build = "0.8"
